# streamlit-ketcher

./: .gitignore  .pre-commit-config.yaml  Dockerfile  MANIFEST.in  NOTICES  README.md  dev-requirements.txt  dev.py  pyproject.toml  requirements.txt  setup.cfg  streamlit_app.py
.github/: dependabot.yml  repo_meta.yaml
.github/workflows/: ci.yml
e2e/: e2e_utils.py  test_basic_example.py  test_dearomatize.py
e2e/apps/: basic_example.py  dearomatize.py
frontend/: package-lock.json  package.json
frontend/src/: Button.spec.tsx  Button.ts  LoadingPlaceholder.spec.tsx  LoadingPlaceholder.tsx  MyComponent.spec.tsx  MyComponent.tsx  StreamlitKetcherEditor.tsx  Theme.d.ts  index.tsx  mocks.tsx  setupTests.js
streamlit_ketcher/: __init__.py
streamlit_ketcher/frontend/: asset-manifest.json  index.html
streamlit_ketcher/frontend/static/css/: 81.2d0105fb.chunk.css  81.2d0105fb.chunk.css.map  main.493f9bc5.css  main.493f9bc5.css.map
streamlit_ketcher/frontend/static/js/: 170.39ec5a73.chunk.js.LICENSE.txt  569.0f96d557.chunk.js  81.346c2d24.chunk.js  81.346c2d24.chunk.js.map  main.92f3f800.js  main.92f3f800.js.LICENSE.txt  main.92f3f800.js.map
tests/: conftest.py  test_streamlit_ketcher.py
