# As per https://packaging.python.org/en/latest/tutorials/packaging-projects/
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "streamlit_ketcher"
version = "0.0.1"
authors = [
    { name="Kamil Bregula", email="dzakus13+pypi@gmail.com" },
]
description = "Ketcher editor component for Streamlit."
readme = "README.md"
license = {text = "Apache-2.0"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry"
]

dependencies = [
    "streamlit>=1.0.0",
]
requires-python = ">=3.7"

[tool.setuptools]
packages = {find={}}

[project.urls]
"Homepage" = "https://github.com/mik-laj/streamlit-ketcher"
"Bug Tracker" = "https://github.com/mik-laj/streamlit-ketcher/issues"
"Demo" = "https://ketcher-editor.streamlit.app/"
