[metadata]
name = streamlit_ketcher
version = attr: streamlit_ketcher.__version__
description = Ketcher editor component for Streamlit.
long_description = file: README.md
long_description_content_type = text/markdown
home_page = https://.....streamlit.app/
url = https://github.com/....
author = Snowflake Inc
license = Apache License 2.0
license_file = LICENSE

[options]
packages = find:
include_package_data = true
python_requires = >=3.7
install_requires =
    streamlit >= 1.0.0
